# course_pilot

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN_SYSTEM.md  Dioxus.toml  README.md  build.rs  classes.rs  clippy.toml  course_pilot.db  course_pilot.db-shm  course_pilot.db-wal  design_philosophy.md  diesel.toml  implementation_checklist.md  memories.md  package-lock.json  package.json  run.sh  rustfmt.toml  tailwind.config.js  test_advanced_scheduler.rs
.github/: copilot-instructions.md
.github/workflows/: release.yml  rust.yml
assets/: index.html  tailwind.css  tailwind.out.css
build-aux/flatpak/: com.coursepilot.app.desktop  com.coursepilot.app.metainfo.xml  io.github.coursepilot.course-pilot.yml
docs/: ARCHITECTURE.md  PHILOSOPHY.md  SPECIFICATION.md  codebase_analysis_report.md  design_philosophy.md  implementation_checklist.md  phase4_preparation.md
migrations/2026-01-10-164320-0000_create_courses/: up.sql
migrations/2026-01-10-164321-0000_create_modules/: up.sql
migrations/2026-01-10-164323-0000_create_videos/: up.sql
migrations/2026-01-10-164323-0001_create_exams/: down.sql  up.sql
migrations/2026-01-11-171525-0000_add_user_answers_to_exams/: down.sql  up.sql
migrations/2026-01-11-180007-0000_create_notes/: up.sql
migrations/2026-01-11-183215-0000_add_video_description/: up.sql
migrations/2026-01-11-183742-0000_create_user_preferences/: up.sql
migrations/2026-01-16-211852-0000_create_tags/: down.sql  up.sql
migrations/2026-01-16-212745-0000_create_search_index/: down.sql  up.sql
migrations/2026-01-16-213803-0000_add_video_summary/: down.sql  up.sql
migrations/2026-01-18-120000-0000_add_right_panel_preference/: down.sql  up.sql
migrations/2026-01-20-130000-0000_add_onboarding_preference/: down.sql  up.sql
migrations/2026-02-01-000000-0000_add_video_source/: down.sql  up.sql
migrations/2026-02-02-000000-0000_make_youtube_id_nullable/: down.sql  up.sql
migrations/2026-02-06-120000-0000_add_right_panel_width/: down.sql  up.sql
migrations/2026-04-30-000000-0000_add_video_key_points/: down.sql  up.sql
migrations/2026-04-30-000002-0000_add_source_hash/: down.sql  up.sql
migrations/2026-04-30-000003-0000_add_performance_indexes/: down.sql  up.sql
migrations/2026-05-01-000000-0000_add_preferred_quality/: down.sql  up.sql
migrations/2026-05-29-000001-0000_add_boundary_batch_size/: down.sql  up.sql
migrations/2026-05-30-000000-0000_create_chat_messages/: up.sql
resources/: resources.gresource.xml
resources/css/: style.css
scripts/: course-pilot-launcher.sh  setup-linux.sh
src/: app.rs  course_pilot.db  error_handling.rs  index.css  lib.rs  main.rs  schema.rs  state.rs  types.rs  video_player_test.rs
src/application/: context.rs  mod.rs
src/application/use_cases/: ask_companion.rs  attach_transcript.rs  chat.rs  create_module.rs  dashboard.rs  delete_module.rs  export_course_notes.rs  ingest_local.rs  ingest_playlist.rs  mod.rs  move_video_to_module.rs  notes.rs  plan_session.rs  preferences.rs  reorder_video.rs  summarize_video.rs  take_exam.rs  update_course.rs  update_module_title.rs  update_presence.rs
src/components/: mod.rs
src/domain/: mod.rs
src/domain/entities/: analytics.rs  course.rs  exam.rs  mod.rs  module.rs  note.rs  search.rs  tag.rs  user_preferences.rs  video.rs
src/domain/ports/: chat_repository.rs  embedder.rs  event_bus.rs  keystore.rs  llm.rs  local_media.rs  mod.rs  presence.rs  repository.rs  stream.rs  transcript.rs  youtube.rs
src/domain/services/: boundary_detector.rs  mod.rs  sanitizer.rs  session_planner.rs  subtitle_cleaner.rs  transcript_chunker.rs
src/domain/value_objects/: embedding.rs  exam_difficulty.rs  ids.rs  mod.rs  session.rs  tag_id.rs  video_quality.rs  video_source.rs  youtube.rs
src/export/: course.rs  io.rs  mod.rs  notes.rs  plan.rs
src/gemini/: client.rs  mod.rs  types.rs
src/infrastructure/: embed_relay.rs  media_hash.rs  media_relay.rs  mod.rs  tokio_bridge.rs
src/infrastructure/discord/: mod.rs
src/infrastructure/event_bus/: mod.rs
src/infrastructure/keystore/: mod.rs
src/infrastructure/llm/: mod.rs
src/infrastructure/local_media/: mod.rs
src/infrastructure/ml/: mod.rs
src/infrastructure/persistence/: connection.rs  mod.rs  (+6 more)
src/ingest/: local_folder.rs  mod.rs  youtube.rs
src/nlp/: mod.rs  preference_service.rs  processor.rs  sequential_detection.rs  session_grouper.rs
src/planner/: analytics.rs  calendar.rs  capacity.rs  clustering_integration.rs  mod.rs  multi_factor_optimizer.rs  optimization.rs  packing.rs  recommendations.rs  scheduler.rs  sequential.rs  strategy.rs  tests.rs
src/state/: courses.rs  export_progress.rs  imports.rs  mod.rs  notes.rs  plans.rs  ui.rs  video_player.rs
src/storage/: analytics.rs  connection_manager.rs  core.rs  courses.rs  database.rs  maintenance.rs  migrations.rs  mod.rs  notes.rs  optimized_queries.rs  plans.rs  preference_storage.rs  progress.rs  settings.rs  utils.rs
src/types/: course.rs  import.rs  mod.rs  plan.rs  ui.rs
src/ui/: accessibility.rs  actions.rs  add_course_dialog.css  add_course_dialog.rs  app.rs  app_root.rs  backend_adapter.rs  course_dashboard.rs  css.rs  dashboard.rs  error_handling.rs  hooks.rs  layout.rs  list_models.rs  mod.rs  navigation.rs  notes_panel.rs  notes_window.rs  plan_view.rs  retry_util.rs  right_panel.rs  routes.rs  shortcuts.rs  state.rs  state_management.rs  theme.rs  theme_unified.rs  toast.rs  types.rs
src/video_player/: README.md  controls.rs  cross_platform.rs  hooks.rs  ipc.rs  local.rs  local_player.rs  mod.rs  player.rs  progress.rs  state.rs  types.rs  utils.rs  webview_youtube_player.rs  youtube.rs  youtube_player.rs
tests/: accessibility_tests.rs  backend_adapter_tests.rs  component_tests.rs  integration.rs  integration_example.rs  integration_test.rs  navigation_tests.rs  pdf_export_tests.rs  performance_benchmarks.rs  performance_tests.rs  plan_ext_tests.rs  preference_learning_test.rs  simple_real_test.rs  test_advanced_scheduler.rs  test_pdf_content.rs  test_pdf_output.rs  ui_quality_assurance.rs  ui_tests.rs
(+181 files in other folders)
